--- a/homeworks/HW01/HWN01.ipynb
+++ b/homeworks/HW01/HWN01.ipynb
@@ -2,15 +2,166 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-11-25T14:05:32.675496Z",
+     "start_time": "2025-11-25T14:05:32.407485Z"
+    }
    },
+   "source": "import numpy as np",
    "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-25T14:05:39.047629Z",
+     "start_time": "2025-11-25T14:05:39.027879Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    ""
-   ]
+    "l1 = np.array([[1,2,3],[4,5,6],[7,8,9]]) # Создание массива из списка\n",
+    "l2 = np.zeros((3,3)) # Создание массива нулей 3 на 3\n",
+    "l3 = np.ones((3,3)) # Единиц 3 на 3\n",
+    "l4 = np.arange(9) # Одномерный от 0 до 8\n",
+    "\n",
+    "l1, l2, l3, l4"
+   ],
+   "id": "5b43741d8410cfee",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]]),\n",
+       " array([[0., 0., 0.],\n",
+       "        [0., 0., 0.],\n",
+       "        [0., 0., 0.]]),\n",
+       " array([[1., 1., 1.],\n",
+       "        [1., 1., 1.],\n",
+       "        [1., 1., 1.]]),\n",
+       " array([0, 1, 2, 3, 4, 5, 6, 7, 8]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-25T14:09:20.955459Z",
+     "start_time": "2025-11-25T14:09:20.942202Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "l2.shape, l2.dtype",
+   "id": "621a4bbb9ed4d8c7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3, 3), dtype('float64'))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-25T14:14:57.322694Z",
+     "start_time": "2025-11-25T14:14:57.305142Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "l4[3], l1[2, 1:3] # Сначала 3 элемент одномерного массива, потом 2 (3 если с 1) столбец элементы с 1 по 3 (со 2 по 4 не включительно)",
+   "id": "7d15706371064cf5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.int64(3), array([8, 9]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-25T14:16:00.736932Z",
+     "start_time": "2025-11-25T14:16:00.720248Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "l1+l3, l1*l3 # Сложение и умножение матриц",
+   "id": "e48f17813a18546c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 2.,  3.,  4.],\n",
+       "        [ 5.,  6.,  7.],\n",
+       "        [ 8.,  9., 10.]]),\n",
+       " array([[1., 2., 3.],\n",
+       "        [4., 5., 6.],\n",
+       "        [7., 8., 9.]]))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-25T14:22:24.695877Z",
+     "start_time": "2025-11-25T14:22:24.681199Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.mean(l1)",
+   "id": "e16b8999259efd0c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c1bfcb3a07b9da4e"
   }
  ],
  "metadata": {
